--- a/index.html
+++ b/index.html
@@ -162,10 +162,10 @@
                   project ideas for beginners in full- stack development.
                 </p>
                 <a
-                  href="https://github.com/Kavyajagana/StackBlaze"
+                  href="https://verdant-cendol-2b2867.netlify.app"
                   class="btn card-button mt-auto"
                   target="_blank"
-                  >Check Code</a
+                  >Explore</a
                 >
               </div>
             </div>
